--- a/widgets/simple-dark/player.css
+++ b/widgets/simple-dark/player.css
@@ -155,18 +155,22 @@ footer .time-tracker .timer .bg {
   border-radius: 10px;
   background: none;
   box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.2);
-  overflow: hidden;
+  overflow: hidden;  /* Essa propriedade permite manter tudo organizado dentro da tag .bg */
   box-sizing: border-box;
 }
 
-footer .time-tracker .timer .bg:before {
+/* Ajuste: Não é possível alterar :before com JavaScript, diretamente. */
+footer .time-tracker .timer .bg .progress-bar {
   content: "";
   top: 50%;
   transform: translateY(-50%);
   position: absolute;
   height: 0.2rem;
   border-radius: 10px;
-  width: 10%;
+
+  /* Controlador da Barra de Progresso. */
+  width: 30%;
+
   background: cyan;
   box-shadow: 0 0 2px 2px cyan;
 }
